--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     </div>
   
     <div class="grid">
+      <div class="box">
       <h2 class="subtitulo">Bicicletas Feitas a Mão</h2>
       <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe.
         Ela vem equipada com os melhores acessórios da marca.
       </p>
-      <img src="./img/bicicleta.jpg" alt="bicicleta preta">
       <a class="botao" href="/">VER MAIS</a>
+      </div>
+      <img src="./img/bicicleta.jpg" alt="bicicleta preta">
     </div>
 
 </body>
