--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="/">LOJAS</a>
       <a href="/">CONTATO</a>
     </div>
-    
+
     <div class="grid">
       <div class="box">
       <h2 class="subtitulo">Bicicletas Feitas a Mão</h2>
@@ -24,7 +24,9 @@
       <a class="botao" href="/">VER MAIS</a>
       </div>
       <img src="./img/bicicleta.jpg" alt="bicicleta preta">
+      <p>VANTAGENS BIKCRAFT</p>
+      
     </div>
-    <div class="detalhe"></div>
+
 </body>
 </html>
