create box3 description

--- a/index.html
+++ b/index.html
@@ -24,9 +24,20 @@
       <a class="botao" href="/">VER MAIS</a>
       </div>
       <img src="./img/bicicleta.jpg" alt="bicicleta preta">
-      <p>VANTAGENS BIKCRAFT</p>
-      
+      <div class="box2">
+        <p class="texto">VANTAGENS BIKCRAFT</p>
+      </div>
+      <div class="box3">
+        <img src="./img/bicycle.svg" alt=" bicicleta vermelha">
+          <span>Motor Elétrico</span>
+          <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+        <img src="./img/speedometer.svg" alt="medidor de velocidade vermelho">
+          <p class="principal">40 km/h</p>
+          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+        <img src="./img/gps.svg" alt="Ratreador de gps vermelho">
+          <p class="principal">Rastreador</p>
+          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+        </div>
     </div>
-
 </body>
 </html>
