--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
         <p class="texto">VANTAGENS BIKCRAFT</p>
       </div>
       <div class="box3">
-        <img src="./img/bicycle.svg" alt=" bicicleta vermelha">
+        <div class="info">
+          <img src="./img/bicycle.svg" alt=" bicicleta vermelha">
           <span>Motor Elétrico</span>
+        </div>
           <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-        <img src="./img/speedometer.svg" alt="medidor de velocidade vermelho">
-          <p class="principal">40 km/h</p>
+          <div class="info">
+            <img src="./img/speedometer.svg" alt="medidor de velocidade vermelho">
+            <span class="spanrincipal">40 km/h</span>
+          </div>
           <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-        <img src="./img/gps.svg" alt="Ratreador de gps vermelho">
-          <p class="principal">Rastreador</p>
+          <div class="info">
+            <img src="./img/gps.svg" alt="Ratreador de gps vermelho">
+            <span class="principal">Rastreador</span>
+          </div>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </div>
     </div>
