--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
 
     <div class="grid">
       <div class="box">
-      <h2 class="subtitulo">Bicicletas Feitas a Mão</h2>
-      <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe.
-        Ela vem equipada com os melhores acessórios da marca.
-      </p>
-      <a class="botao" href="/">VER MAIS</a>
+        <h2 class="subtitulo">Bicicletas Feitas a Mão</h2>
+        <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe.
+          Ela vem equipada com os melhores acessórios da marca.
+        </p>
+        <a class="botao" href="/">VER MAIS</a>
       </div>
       <img src="./img/bicicleta.jpg" alt="bicicleta preta">
       <div class="box2">
         <p class="texto">VANTAGENS BIKCRAFT</p>
       </div>
+      
       <div class="box3">
         <div class="info">
           <img src="./img/bicycle.svg" alt=" bicicleta vermelha">
@@ -44,6 +45,9 @@
           </div>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </div>
+    </div>
+    <div class="footer">
+      <p class="rodape">Bikcraft. Alguns Direitos Reservados</p>
     </div>
 </body>
 </html>
