--- a/index.html
+++ b/index.html
@@ -8,46 +8,44 @@
 </head>
 <body>
   <h1>bikcraft</h1>
-    <div class="menu">
-      <a href="/">SOBRE</a>
-      <a href="/">PRODUTOS</a>
-      <a href="/">LOJAS</a>
-      <a href="/">CONTATO</a>
-    </div>
+<div class="menu">
+    <a href="/">Sobre</a>
+    <a href="/">Produtos</a>
+    <a href="/">Lojas</a>
+    <a href="/">Contato</a>
+</div>
 
-    <div class="grid">
-      <div class="box">
-        <h2 class="subtitulo">Bicicletas Feitas a Mão</h2>
-        <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe.
-          Ela vem equipada com os melhores acessórios da marca.
-        </p>
-        <a class="botao" href="/">VER MAIS</a>
-      </div>
-      <img src="./img/bicicleta.jpg" alt="bicicleta preta">
-      <div class="box2">
-        <p class="texto">VANTAGENS BIKCRAFT</p>
-      </div>
-      
-      <div class="box3">
-        <div class="info">
-          <img src="./img/bicycle.svg" alt=" bicicleta vermelha">
-          <span>Motor Elétrico</span>
-        </div>
-          <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-          <div class="info">
-            <img src="./img/speedometer.svg" alt="medidor de velocidade vermelho">
-            <span class="spanrincipal">40 km/h</span>
-          </div>
-          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-          <div class="info">
-            <img src="./img/gps.svg" alt="Ratreador de gps vermelho">
-            <span class="principal">Rastreador</span>
-          </div>
-          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-        </div>
+<div class="conteudo">
+  <div class="introducao">
+    <span class="detalhe"></span>
+    <h2 class="subtitulo">Bicicletas Feitas a Mão</h2>
+    <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
+    <a class="botao" href="/">Ver Mais</a>
+  </div>
+  <img src="./img/bicicleta.jpg" alt="Bicicleta preta">
+  <h3 class="subtitulo">VANTAGENS BIKCRAFT</h3>
+
+
+  <div class="vantagens">
+    <div class="vantagens-item">
+    <img src="./img/bicycle.svg" alt="">
+    <h4>Motor Elétrico</h4>
+    <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
     </div>
-    <div class="footer">
-      <p class="rodape">Bikcraft. Alguns Direitos Reservados</p>
+    <div class="vantagens-item">
+    <img src="./img/speedometer.svg" alt="">
+    <h4>40 km/h</h4>
+    <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
     </div>
+    <div class="vantagens-item">
+    <img src="./img/gps.svg" alt="">
+    <h4>Rastreador</h4>
+    <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+    </div>
+  </div>
+</div>
+  <div class="rodape">
+    <p>Bikcraft. Alguns Direitos Reservados</p>
+  </div>
 </body>
 </html>
