--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
     <a class="botao" href="/">Ver Mais</a>
   </div>
-  <img src="./img/bicicleta.jpg" alt="Bicicleta preta">
+  
+  <img class="foto" src="./img/bicicleta.jpg" alt="Bicicleta preta">
+  
   <h3 class="subtitulo">VANTAGENS BIKCRAFT</h3>
-
 
   <div class="vantagens">
     <div class="vantagens-item">
@@ -44,8 +45,10 @@
     </div>
   </div>
 </div>
+
   <div class="rodape">
     <p>Bikcraft. Alguns Direitos Reservados</p>
   </div>
+  
 </body>
 </html>
