--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
 <div class="conteudo">
   <div class="introducao">
     <span class="detalhe"></span>
-    <h2 class="subtitulo">Bicicletas Feitas a Mão</h2>
+    <h2 class="texto-info">Bicicletas Feitas a Mão</h2>
     <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
     <a class="botao" href="/">Ver Mais</a>
   </div>
   
   <img class="foto" src="./img/bicicleta.jpg" alt="Bicicleta preta">
   
-  <h3 class="subtitulo">VANTAGENS BIKCRAFT</h3>
+  <h3 class="subtitulo">Vantagens Bikcraft</h3>
 
   <div class="vantagens">
     <div class="vantagens-item">
-    <img src="./img/bicycle.svg" alt="">
-    <h4>Motor Elétrico</h4>
-    <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+      <img src="./img/bicycle.svg" alt="">
+      <h4>Motor Elétrico</h4>
+      <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
     </div>
     <div class="vantagens-item">
-    <img src="./img/speedometer.svg" alt="">
-    <h4>40 km/h</h4>
-    <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+      <img src="./img/speedometer.svg" alt="">
+      <h4>40 km/h</h4>
+      <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
     </div>
     <div class="vantagens-item">
-    <img src="./img/gps.svg" alt="">
-    <h4>Rastreador</h4>
-    <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+      <img src="./img/gps.svg" alt="">
+      <h4>Rastreador</h4>
+      <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
     </div>
   </div>
 </div>
@@ -49,6 +49,6 @@
   <div class="rodape">
     <p>Bikcraft. Alguns Direitos Reservados</p>
   </div>
-  
+
 </body>
 </html>
