--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <a href="/">Contato</a>
 </div>
 
-<div class="conteudo">
-  <div class="introducao">
+<div class="conteudo"> <!-- Caixa padrão do grid-->
+  <div class="introducao"> <!--Segunda caixa para envolter o conteudo-->
     <span class="detalhe"></span>
-    <h2 class="texto-info">Bicicletas Feitas a Mão</h2>
-    <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
+    <h2>Bicicletas Feitas a Mão</h2>
+    <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
     <a class="botao" href="/">Ver Mais</a>
   </div>
-  
-  <img class="foto" src="./img/bicicleta.jpg" alt="Bicicleta preta">
-  
+  <!--Imagem que fica do lado right do GRID-->
+  <img src="./img/bicicleta.jpg" alt="Bicicleta preta">
+  <!--Caixa left em baixo da introdução-->
   <h3 class="subtitulo">Vantagens Bikcraft</h3>
-
+  <!--Caixa lado right em baixo da imagem-->
   <div class="vantagens">
     <div class="vantagens-item">
       <img src="./img/bicycle.svg" alt="">
