--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <img src="./img/bicicleta.jpg" alt="Bicicleta preta">
   </figure>
   <!--Caixa left em baixo da introdução-->
-    <h3 class="subtitulo">Vantagens Bikcraft</h3>
+    <div class="background">
+      <h3 class="subtitulo">Vantagens Bikcraft</h3>
+    </div>
   <!--Caixa lado right em baixo da imagem-->
   <section class="vantagens">
     <article class="vantagens-item">
