--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <img src="./img/bicicleta.jpg" alt="Bicicleta preta">
   </figure>
   <!--Caixa left em baixo da introdução-->
-    <div class="background">
+    <figure class="background">
       <h3 class="subtitulo">Vantagens Bikcraft</h3>
-    </div>
+    </figure>
   <!--Caixa lado right em baixo da imagem-->
   <section class="vantagens">
     <article class="vantagens-item">
