--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <h1>bikcraft</h1>
   </header>
 <aside>
-  <nav class="menu">
-      <a href="/">Sobre</a>
-      <a href="/">Produtos</a>
-      <a href="/">Lojas</a>
-      <a href="/">Contato</a>
+  <nav aria-label="primária">
+    <ul class="menu">
+      <li><a href="/">Sobre</a></li>
+      <li><a href="/">Produtos</a></li>
+      <li><a href="/">Lojas</a></li>
+      <li><a href="/">Contato</a></li>
+    </ul>
   </nav>
+
 </aside>
 <main class="conteudo"> <!-- Caixa padrão do grid-->
   <section class="introducao"> <!--Segunda caixa para envolter o conteudo-->
