refactoring @media queries

--- a/index.html
+++ b/index.html
@@ -1,67 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <title>Bikecraft</title>
-</head>
-<body>
-  <header>
-    <h1>bikcraft</h1>
-  </header>
-<aside>
-  <nav aria-label="primária">
-    <ul class="menu">
-      <li><a href="/">Sobre</a></li>
-      <li><a href="/">Produtos</a></li>
-      <li><a href="/">Lojas</a></li>
-      <li><a href="/">Contato</a></li>
-    </ul>
-  </nav>
-
-</aside>
-<main class="conteudo"> <!-- Caixa padrão do grid-->
-  <section class="introducao"> <!--Segunda caixa para envolter o conteudo-->
-      <h2>Bicicletas Feitas a Mão</h2>
-      <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
-    <a class="botao" href="/">Ver Mais</a>
-  </section>
-  <!--Imagem que fica do lado right do GRID-->
-  <figure>
-    <img src="./img/bicicleta.jpg" alt="Bicicleta preta">
-  </figure>
-  <!--Caixa left em baixo da introdução-->
-    <figure class="background">
-      <h3 class="subtitulo">Vantagens Bikcraft</h3>
-    </figure>
-  <!--Caixa lado right em baixo da imagem-->
-  <section class="vantagens">
-    <article class="vantagens-item">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Bikecraft</title>
+  </head>
+  <body>
+    <header>
+      <h1>bikcraft</h1>
+    </header>
+    <aside>
+      <nav aria-label="primária">
+        <ul class="menu">
+          <li><a href="/">Sobre</a></li>
+          <li><a href="/">Produtos</a></li>
+          <li><a href="/">Lojas</a></li>
+          <li><a href="/">Contato</a></li>
+        </ul>
+      </nav>
+    </aside>
+    <main class="conteudo">
+      <!-- Caixa padrão do grid-->
+      <section class="introducao">
+        <!--Segunda caixa para envolter o conteudo-->
+        <h2>Bicicletas Feitas a Mão</h2>
+        <p>
+          A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+          vem equipada com os melhores acessórios da marca.
+        </p>
+        <a class="botao" href="/">Ver Mais</a>
+      </section>
+      <!--Imagem que fica do lado right do GRID-->
       <figure>
-         <img src="./img/bicycle.svg" alt="">
+        <img class="imgbike" src="./img/bicicleta.jpg" alt="Bicicleta preta" />
       </figure>
-        <h4>Motor Elétrico</h4>
-        <p>Permite você viajar distâncias inimagináveis com a sua bike.</p>
-    </article>
-    <article class="vantagens-item">
-      <figure>
-        <img src="./img/speedometer.svg" alt="">
+      <!--Caixa left em baixo da introdução-->
+      <figure class="background">
+        <h3 class="subtitulo">Vantagens Bikcraft</h3>
       </figure>
-      <h4>40 km/h</h4>
-      <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-    </article>
-    <article class="vantagens-item">
-      <figure>
-        <img src="./img/gps.svg" alt="">
-      </figure>
-      <h4>Rastreador</h4>
-      <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-    </article>
-  </section>
-</main>
-  <footer class="rodape">
-    <p>Bikcraft. Alguns Direitos Reservados</p>
-  </footer>
-</body>
+      <!--Caixa lado right em baixo da imagem-->
+      <section class="vantagens">
+        <article class="vantagens-item">
+          <figure>
+            <img src="./img/bicycle.svg" alt="" />
+          </figure>
+          <h4>Motor Elétrico</h4>
+          <p>Permite você viajar distâncias inimagináveis com a sua bike.</p>
+        </article>
+        <article class="vantagens-item">
+          <figure>
+            <img src="./img/speedometer.svg" alt="" />
+          </figure>
+          <h4>40 km/h</h4>
+          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+        </article>
+        <article class="vantagens-item">
+          <figure>
+            <img src="./img/gps.svg" alt="" />
+          </figure>
+          <h4>Rastreador</h4>
+          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+        </article>
+      </section>
+    </main>
+    <footer class="rodape">
+      <p>Bikcraft. Alguns Direitos Reservados</p>
+    </footer>
+  </body>
 </html>
